ghc-4335c07/testsuite/tests/driver/T2507.stderr

T2507.hs:5:7: error:
    * Couldn't match expected type `Int' with actual type `()'
    * In the expression: ()
      In an equation for `foo': foo = ()
