ghc-4335c07/testsuite/tests/driver/T2507.hs

module T2507 where

foo :: Int
foo = ()
